# -------

./: .env  .env.example  .gitignore  CRITICAL_ISSUES.md  Dockerfile  LAUNCH_CHECKLIST.md  LICENSE  README.md  REAL_PROBLEMS.md  alembic.ini  branding_strategy.md  config.example.toml  design_insights.md  docker-compose.yml  init_db.py  launch.bat  launch.sh  owl_studio.db  requirements.txt  requirements_fixed.txt  run_server.py  test_auth.py  test_import.py  test_server.py  test_simple.py  상용화_구현_계획.md
.claude/: CURRENT_STATUS.md  state.json
app/: asgi.py  router.py  worker.py
claudedocs/: API_KEY_MIGRATION_GUIDE.md  CODE_REVIEW_LOG.md  DATABASE_MIGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_LOG.md  ERROR_TRACKING.md  FINAL_COMPLETION_REPORT.md  LAUNCH_GUIDE.md  MONITORING_GUIDE.md  PAYMENT_WEBHOOK_GUIDE.md  PAYMENT_WEBHOOK_REVIEW.md  PROJECT_MASTER_PLAN.md  QUALITY_IMPROVEMENTS.md  SECURITY_PATCH_2025-10-03.md  SYSTEM_AUDIT_REPORT.md  TECH_DEBT_CLEANUP_PLAN.md  TESTING_GUIDE.md  comprehensive_analysis_report.md  phase1_task_plan.md  product_analysis.md  브랜딩_완성_리포트.md
docs/: ENGINEERING_ROADMAP.md  Phase1_완료_보고서.md  Phase1_치명적_오류_분석_및_해결계획.md  README.md  STOICFLOW_ARCHITECTURE_2026.md  YOUTUBE_API_설정_가이드.md  개발_노트.md  개발_로드맵.md  구현_계획서.md  기술_부채_관리.md  수석개발자_리포트.md  실전_테스트_결과물_안내.md  오류_노트.md  진행_상황_리포트.md  코드_품질_검토_리포트.md  코딩_표준.md  팀_협업_가이드.md  품질_개선_이력.md  (+3 more)
stoicflow/: .env.example  .gitignore  README.md  pyproject.toml
stoicflow/src/stoicflow/: __init__.py
stoicflow/src/stoicflow/application/: __init__.py
stoicflow/src/stoicflow/application/interfaces/: __init__.py  llm_provider.py  publisher.py  tts_provider.py  video_editor.py
stoicflow/src/stoicflow/application/services/: __init__.py  pipeline.py
stoicflow/src/stoicflow/application/use_cases/: __init__.py
stoicflow/src/stoicflow/config/: __init__.py  settings.py
stoicflow/src/stoicflow/domain/: __init__.py
stoicflow/src/stoicflow/domain/entities/: __init__.py  script.py  video.py
stoicflow/src/stoicflow/domain/value_objects/: __init__.py  audio.py  subtitle.py
stoicflow/src/stoicflow/infrastructure/llm/: __init__.py  claude_adapter.py
stoicflow/src/stoicflow/infrastructure/media/: __init__.py
stoicflow/src/stoicflow/infrastructure/tts/: __init__.py  edge_tts_adapter.py
stoicflow/src/stoicflow/infrastructure/video/: __init__.py  moviepy_adapter.py
stoicflow/src/stoicflow/infrastructure/youtube/: __init__.py  youtube_api_adapter.py
stoicflow/src/stoicflow/presentation/: __init__.py
stoicflow/src/stoicflow/presentation/api/: __init__.py
stoicflow/src/stoicflow/presentation/cli/: main.py
stoicflow/src/stoicflow/presentation/gui/: __init__.py
stoicflow/src/stoicflow/presentation/tui/: __init__.py
(+179 files in other folders)
