[project]
name = "stoicflow"
version = "1.0.0"
description = "YouTube Shorts automation pipeline for Stoic philosophy content - 2026 Edition"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "StoicFlow Team" }
]
keywords = ["youtube", "shorts", "automation", "stoic", "philosophy", "video"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    # Core Framework
    "pydantic>=2.5",
    "pydantic-settings>=2.1",

    # Video Processing
    "moviepy>=2.0",
    "imageio-ffmpeg>=0.5",
    "pillow>=10.0",

    # AI & TTS
    "anthropic>=0.40",
    "edge-tts>=6.1",
    "faster-whisper>=1.0",

    # YouTube Integration
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.140",

    # CLI & UI
    "typer[all]>=0.12",
    "rich>=13.0",

    # Utilities
    "loguru>=0.7",
    "httpx>=0.27",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
gui = [
    "flet>=0.25",
]
tui = [
    "textual>=0.90",
]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]
premium = [
    "elevenlabs>=1.0",
    "openai>=1.50",
    "google-generativeai>=0.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
all = [
    "stoicflow[gui,tui,api,premium,dev]",
]

[project.scripts]
stoicflow = "stoicflow.presentation.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stoicflow"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["stoicflow"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
